{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 151,
  "lineage": "019c3875-e84f-b1f0-d33b-031601c53ada",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e449927258d45bc4",
            "arn": "arn:aws:ec2:us-east-1:011528299349:instance/i-00801f0a50651a73d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00801f0a50651a73d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "twogem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d321df498809af5c",
            "private_dns": "ip-10-0-2-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c248bb7d3fa796a3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae34f96222963bea",
            "tags": {
              "Name": "DBServerInstance"
            },
            "tags_all": {
              "Name": "DBServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0242604ef27bebac6"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.tier_private_subnet_a",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e449927258d45bc4",
            "arn": "arn:aws:ec2:us-east-1:011528299349:instance/i-0954f1910c48eb828",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0954f1910c48eb828",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "twogem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaf1039628a1a8e2",
            "private_dns": "ip-10-0-1-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_ip": "44.205.5.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f42c913e9be4e4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddf2716084eab3b6",
            "tags": {
              "Name": "WebServerInstance"
            },
            "tags_all": {
              "Name": "WebServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d509d0400efb7648"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.tier_public_subnet",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tier_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:internet-gateway/igw-0e5db635cf5b5a541",
            "id": "igw-0e5db635cf5b5a541",
            "owner_id": "011528299349",
            "tags": {
              "Name": "TierIGW"
            },
            "tags_all": {
              "Name": "TierIGW"
            },
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:network-interface/eni-067c9df63b7e3fd6e",
            "id": "eni-067c9df63b7e3fd6e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a0:90:f2:73:77",
            "owner_id": "011528299349",
            "private_ip": "10.0.1.94",
            "private_ip_list": [
              "10.0.1.94"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.94"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d509d0400efb7648"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddf2716084eab3b6",
            "tags": {
              "Name": "WebServerNIC"
            },
            "tags_all": {
              "Name": "WebServerNIC"
            }
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.tier_public_subnet",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tier_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5db635cf5b5a541",
            "id": "r-rtb-0e9cf3c9402d000fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9cf3c9402d000fc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tier_igw",
            "aws_route_table.tier_public_route_table",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tier_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:route-table/rtb-08a8af04b22cc49ac",
            "id": "rtb-08a8af04b22cc49ac",
            "owner_id": "011528299349",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tier_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:route-table/rtb-0e9cf3c9402d000fc",
            "id": "rtb-0e9cf3c9402d000fc",
            "owner_id": "011528299349",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TierPublicRouteTable"
            },
            "tags_all": {
              "Name": "TierPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier_private_subnet_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a929682d4eac5c0e",
            "route_table_id": "rtb-08a8af04b22cc49ac",
            "subnet_id": "subnet-0ae34f96222963bea"
          },
          "dependencies": [
            "aws_route_table.tier_private_route_table",
            "aws_subnet.tier_private_subnet_a",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier_private_subnet_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c754f42616c79584",
            "route_table_id": "rtb-08a8af04b22cc49ac",
            "subnet_id": "subnet-01c77e76b92e394a1"
          },
          "dependencies": [
            "aws_route_table.tier_private_route_table",
            "aws_subnet.tier_private_subnet_b",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c350b7385a579994",
            "route_table_id": "rtb-0e9cf3c9402d000fc",
            "subnet_id": "subnet-0ddf2716084eab3b6"
          },
          "dependencies": [
            "aws_route_table.tier_public_route_table",
            "aws_subnet.tier_public_subnet",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:security-group/sg-0242604ef27bebac6",
            "description": "Allow MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0242604ef27bebac6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "011528299349",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:security-group/sg-0d509d0400efb7648",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d509d0400efb7648",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "011528299349",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3827901182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0242604ef27bebac6",
            "security_group_rule_id": "sgr-0ddb92562eaf27d99",
            "self": false,
            "source_security_group_id": "sg-0d509d0400efb7648",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tier_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:subnet/subnet-0ae34f96222963bea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae34f96222963bea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528299349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TierPrivateSubnetA"
            },
            "tags_all": {
              "Name": "TierPrivateSubnetA"
            },
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tier_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:subnet/subnet-01c77e76b92e394a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c77e76b92e394a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528299349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "TierPrivateSubnetB"
            },
            "tags_all": {
              "name": "TierPrivateSubnetB"
            },
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tier_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:subnet/subnet-0ddf2716084eab3b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddf2716084eab3b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528299349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TierPublicSubnet"
            },
            "tags_all": {
              "Name": "TierPublicSubnet"
            },
            "vpc_id": "vpc-0cc61109ac843b333"
          },
          "dependencies": [
            "aws_vpc.tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528299349:vpc/vpc-0cc61109ac843b333",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05eb9aedd3ad09b2d",
            "default_route_table_id": "rtb-0f0cb2f25879f53b2",
            "default_security_group_id": "sg-07ee26b21bf98bc09",
            "dhcp_options_id": "dopt-0530958cd0b816b63",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc61109ac843b333",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0cb2f25879f53b2",
            "owner_id": "011528299349",
            "tags": {
              "Name": "TierVPC"
            },
            "tags_all": {
              "Name": "TierVPC"
            }
          }
        }
      ]
    }
  ]
}